--- a/index.html
+++ b/index.html
@@ -1,44 +1,122 @@
-Visa Appointment Booking Assistant - Privacy Policy
-The Visa Appointment Booking Assistant is a browser extension designed to help users automate the process of monitoring and booking visa appointments.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Visa Appointment Booking Assistant</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        h1, h2 {
+            color: #444;
+        }
+        h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 24px;
+            margin-top: 30px;
+            margin-bottom: 10px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        ul {
+            margin-bottom: 15px;
+            padding-left: 20px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy - Visa Appointment Booking Assistant</h1>
+        <p><em>Last updated: [Insert Date]</em></p>
 
-How It Works
-When you visit the visa booking website, the extension will:
+        <h2>Introduction</h2>
+        <p>
+            The Visa Appointment Booking Assistant is a browser extension designed to help users automate the process of monitoring and booking visa appointments. This Privacy Policy explains how we handle your data and ensure your privacy.
+        </p>
 
-Monitor the page for available appointment slots.
+        <h2>How It Works</h2>
+        <p>
+            When you visit the visa booking website, the extension will:
+        </p>
+        <ul>
+            <li>Monitor the page for available appointment slots.</li>
+            <li>Automatically book an appointment based on your preferences (if enabled).</li>
+            <li>Notify you of the booking status or any changes in availability.</li>
+        </ul>
 
-Automatically book an appointment based on your preferences (if enabled).
+        <h2>What Data Is Processed</h2>
+        <p>
+            The extension processes the following data to provide its functionality:
+        </p>
+        <ul>
+            <li><strong>Appointment Details</strong>: Dates, times, and locations of available appointments.</li>
+            <li><strong>User Preferences</strong>: Your preferred appointment dates, times, and other settings configured in the extension.</li>
+        </ul>
 
-Notify you of the booking status or any changes in availability.
+        <h2>What Data Is Saved</h2>
+        <p>
+            The extension saves the following data locally on your device:
+        </p>
+        <ul>
+            <li><strong>User Preferences</strong>: Your configured settings (e.g., preferred appointment dates and times).</li>
+            <li><strong>Appointment Information</strong>: Details of booked or monitored appointments for your reference.</li>
+        </ul>
 
-What Data Is Processed
-The extension processes the following data to provide its functionality:
+        <h2>What About Personal Data?</h2>
+        <p>
+            <strong>No Personal Data Collected</strong>: The extension does not collect, store, or share any personally identifiable information (PII) such as your name, email address, or passport details.
+        </p>
+        <p>
+            <strong>No Tracking Cookies</strong>: The extension does not use tracking cookies or any other means to monitor your browsing activity outside the visa booking website.
+        </p>
 
-Appointment Details: Dates, times, and locations of available appointments.
+        <h2>Data Security</h2>
+        <p>
+            All data processed by the extension is handled locally on your device and is not transmitted to any external servers or third parties.
+        </p>
+        <p>
+            The extension does not have access to sensitive information such as passwords, payment details, or personal identification numbers.
+        </p>
 
-User Preferences: Your preferred appointment dates, times, and other settings configured in the extension.
+        <h2>Third-Party Services</h2>
+        <p>
+            The extension interacts only with the official visa booking website to monitor and book appointments. It does not integrate with or share data with any third-party services.
+        </p>
 
-What Data Is Saved
-The extension saves the following data locally on your device:
+        <h2>Changes to This Privacy Policy</h2>
+        <p>
+            We may update this Privacy Policy from time to time. Any changes will be posted on this page, and we encourage you to review it periodically.
+        </p>
 
-User Preferences: Your configured settings (e.g., preferred appointment dates and times).
-
-Appointment Information: Details of booked or monitored appointments for your reference.
-
-What About Personal Data?
-No Personal Data Collected: The extension does not collect, store, or share any personally identifiable information (PII) such as your name, email address, or passport details.
-
-No Tracking Cookies: The extension does not use tracking cookies or any other means to monitor your browsing activity outside the visa booking website.
-
-Data Security
-All data processed by the extension is handled locally on your device and is not transmitted to any external servers or third parties.
-
-The extension does not have access to sensitive information such as passwords, payment details, or personal identification numbers.
-
-Third-Party Services
-The extension interacts only with the official visa booking website to monitor and book appointments. It does not integrate with or share data with any third-party services.
-
-Changes to This Privacy Policy
-We may update this Privacy Policy from time to time. Any changes will be posted on this page, and we encourage you to review it periodically.
-
-Contact Us
-If you have any questions or concerns about this Privacy Policy or the extension's functionality, please contact us at visaagent@cx-space.co.uk
+        <h2>Contact Us</h2>
+        <p>
+            If you have any questions or concerns about this Privacy Policy or the extension's functionality, please contact us at <a href="mailto:visaagent@cx-space.co.uk">visaagent@cx-space.co.uk</a>.
+        </p>
+    </div>
+</body>
+</html>
