Update last updated date

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy - Visa Appointment Booking Assistant</h1>
-        <p><em>Last updated: [Insert Date]</em></p>
+        <p><em>Last updated: 2025-03-20</em></p>
 
         <h2>Introduction</h2>
         <p>
