Update private policy

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy - Visa Appointment Booking Assistant</h1>
-        <p><em>Last updated: 2025-03-20</em></p>
+        <p><em>Last updated: 2025-05-13</em></p>
 
         <h2>Introduction</h2>
         <p>
@@ -66,7 +66,6 @@
         <ul>
             <li>Monitor the page for available appointment slots.</li>
             <li>Automatically book an appointment based on your preferences (if enabled).</li>
-            <li>Notify you of the booking status or any changes in availability.</li>
         </ul>
 
         <h2>What Data Is Processed</h2>
@@ -74,38 +73,58 @@
             The extension processes the following data to provide its functionality:
         </p>
         <ul>
+            <li><strong>User Email Address</strong>: If you choose to use Google Sign-In, we collect your email address for account identification and to provide extension-related services.</li>
             <li><strong>Appointment Details</strong>: Dates, times, and locations of available appointments.</li>
             <li><strong>User Preferences</strong>: Your preferred appointment dates, times, and other settings configured in the extension.</li>
         </ul>
 
         <h2>What Data Is Saved</h2>
         <p>
-            The extension saves the following data locally on your device:
+            The extension saves the following data:
         </p>
         <ul>
-            <li><strong>User Preferences</strong>: Your configured settings (e.g., preferred appointment dates and times).</li>
-            <li><strong>Appointment Information</strong>: Details of booked or monitored appointments for your reference.</li>
+            <li><strong>User Email Address</strong>: If you use Google Sign-In, your email address is stored to maintain your session and preferences. This data is stored securely.</li>
+            <li><strong>User Preferences</strong>: Your configured settings (e.g., preferred appointment dates and times) are saved locally on your device and may be synced with your account if you are signed in.</li>
+            <li><strong>Appointment Information</strong>: Details of booked or monitored appointments for your reference are saved locally on your device and may be synced with your account if you are signed in.</li>
         </ul>
 
-        <h2>What About Personal Data?</h2>
+        <h2>Personal Data Collection and Use</h2>
         <p>
-            <strong>No Personal Data Collected</strong>: The extension does not collect, store, or share any personally identifiable information (PII) such as your name, email address, or passport details.
+            With the introduction of Google Sign-In, we now collect your email address. This information is used for the following purposes:
+        </p>
+        <ul>
+            <li><strong>Account Authentication</strong>: To securely identify you and provide access to the extension's features.</li>
+            <li><strong>Service Provision</strong>: To enable features that require user identification, such as syncing preferences across devices (if applicable in future updates) or sending important notifications related to your use of the extension.</li>
+            <li><strong>Communication</strong>: We may use your email address to send you important updates about the extension, such as changes to our services or terms, or to respond to your support requests.</li>
+        </ul>
+        <p>
+            Apart from your email address (collected via Google Sign-In), the extension does not collect, store, or share any other personally identifiable information (PII) such as your name or passport details.
         </p>
         <p>
-            <strong>No Tracking Cookies</strong>: The extension does not use tracking cookies or any other means to monitor your browsing activity outside the visa booking website.
+            <strong>No Tracking Cookies</strong>: The extension does not use tracking cookies or any other means to monitor your browsing activity outside the visa booking website for purposes unrelated to its core functionality.
         </p>
 
         <h2>Data Security</h2>
         <p>
-            All data processed by the extension is handled locally on your device and is not transmitted to any external servers or third parties.
+            We are committed to protecting your data. Data saved locally on your device (such as preferences and appointment information) is under your control.
         </p>
         <p>
-            The extension does not have access to sensitive information such as passwords, payment details, or personal identification numbers.
+            Your email address, collected via Google Sign-In, is handled with care. We implement appropriate technical and organizational measures to protect your personal data against unauthorized or unlawful processing and against accidental loss, destruction, or damage. Access to your email address is restricted to authorized personnel who need it to perform their duties.
+        </p>
+        <p>
+            The extension does not have access to sensitive information such as passwords (other than what is managed by Google Sign-In), payment details, or personal identification numbers.
         </p>
 
         <h2>Third-Party Services</h2>
         <p>
-            The extension interacts only with the official visa booking website to monitor and book appointments. It does not integrate with or share data with any third-party services.
+            The extension interacts with the following third-party services:
+        </p>
+        <ul>
+            <li><strong>Google Sign-In</strong>: We use Google Sign-In for user authentication. When you use Google Sign-In, you are subject to Google's Privacy Policy. We only receive your email address from Google for the purposes outlined in this policy.</li>
+            <li><strong>Official Visa Booking Website</strong>: The extension interacts with the official visa booking website to monitor and book appointments.</li>
+        </ul>
+        <p>
+            We do not share your personal data with any other third parties, except as required by law or as necessary to provide the extension's services (e.g., authentication via Google).
         </p>
 
         <h2>Changes to This Privacy Policy</h2>
